land_page.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');

li {
    list-style: none;
    display: inline;
}

a {
    text-decoration: none;
}

body {
    background-color: #fff;
    overflow-x: hidden;
    padding: 0;
    margin: 0;
    width: 100%;
    color: #FF5B5B;
    font-family: 'Montserrat', sans-serif;
}

.navbar {
    display: inline;
    justify-content: space-between;
    align-items: center;
    text-align: center;
    padding: 1.5rem;
    color: #FF5B5B;
}

.nav-link {
    display: inline;
    padding: 0.5rem 1rem;
    color: #FF5B5B;
}

.container {
    padding: 0;
    margin: 0;
}

.row {
    
    font-size: 125%;
    text-align: center;
}

.header-content {
    background-image: url(../images/homepage.png);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    height: 95vh;
}

#literary {
    color: #fff;
    letter-spacing: 3px;
    text-shadow: -1px 1px 0 #FF5B5B,
                1px 1px 0 #FF5B5B,
                1px -1px 0 #FF5B5B,
                -1px -1px 0 #FF5B5B;
}
.about{
    position: relative;
    background-image:url(../images/background.jpg);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    height: 50vw;
}
.about img{
    padding-top:11%;
    padding-left: 5%;
    width:35%;
}
.text1{
    position:absolute;
    margin: 30px;
    color: #fdfdfd;
    padding-top: 11%;
    top:0;
    width:50%;
    right:0;
    height:35vw;
    
}
.text1 h1{
    position:absolute;
    top:10%;
    width:35vw;
    color:#8F0000;
    padding-top: 5%;
    font-size:4vw;
    right:25%;
    

}
.text1 p{
    position:absolute;
    top:40%;
    font-size:1.3vw;
}
#about{
    right:0;
}
.events{
    padding:30px;
    position: relative;
    background-color: rgb(253, 253, 253);
    height:40vw;
}
.text2{
    position: absolute;
    height:22vw;
    top:30%;
    font-size:3vw;
    transform: rotate(-90deg);
    left:0;
}
.text2 h1{
    margin:0;
}
:root {
    --page-margin: min(2rem, 5vw);
    color: #444;
    }
    
section {
    position: absolute;
    right: 0;
    top:25%;
    width: 80%;
display: grid;
grid-template-columns: var(--page-margin) [center-start] 1fr [center-end] var(--page-margin);

}

.cards-wrapper {

grid-column: center-start / -1;
display: grid;
grid-auto-flow: column;
gap: 1rem;
overflow: auto;
padding-bottom: 1rem;
padding-right: var(--page-margin);
}

.card {
    position: relative;
    display: grid;
    place-content: center;
    background-color: #d0f0ee;
    color: #15928A;
    font-size: 1.5rem;
    height: 30vw;
    width: 30vw;
}
.card img{
    height: 30vw;
    width: 30vw;
}
.dts{
    position: absolute;
    bottom: 0;
    height: 11vw;
    width: 30vw;
    border-radius: 10px;
    background-image: linear-gradient(to bottom,rgba(222, 186, 186, 0.819), #FE5558,#8F0000);
    z-index: 1;
    
}

.dts h1{
    font-size:1vw;
    color: #f1f1f1;
    font-family: 'Montserrat', sans-serif;
    padding-left: 5%;
}

.tont{
    position: absolute;
    bottom:10%;
    right:5%;
    font-size: 1vw;
    z-index: 2;
    
}
.tont a{
    color: white;
}
.newmag{
    position: relative;
    background-image:url(../images/background.jpg);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    height: 50vw;
}
.column {
    position: relative;
    float: left;
    width: 50%;
    height:50vw;
  }
.row:after {
    content: "";
    display: table;
    clear: both;
  }
.column img{
    padding-top:3%;
    padding-bottom: 3%;
    padding-right: 10%;
    width: 50%;
}

#lit{
    position: absolute;
    
    padding-bottom: 30px;
    right:10%;
}
#newlt{
    padding-top:30px;
    position: absolute;
    bottom:0;
    left: 10%;
}
.text3{
    color:white;
}
.text3 h1{
    color:#8F0000;
    font-size: 3.5vw;
    position: absolute;
    left:15%;
    font-weight: bold;
}
.text3 p{
    position:absolute;
    left:10%;
    font-size:1.2vw;
    color:white;
    top:15%;
    text-align: left;
    width:70%;
}
#news{
    color: #FE5858;
    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
    opacity: 1;
}
.text4{
    color:white;
    position: absolute;
    width: 80%;
    bottom: 5%;
    right:10%;
    height:27vw;
    
}
.text4 h1{
    right:19%;
    position:absolute;
    color:#8F0000;
    font-family: Montserrat;
    font-size:3.5vw;
    font-weight:1400;
    
}
.text4 p{
    position:absolute;
    right:5%;
    font-size:1.1vw;
    color:white;
    bottom:0;
    text-align: left;
    width:70%;
}
.footer{
    position: relative;
}
.footer img{
    width: 20%;

}
.cont{
    font-size:1.5vw;
    position: absolute;
    left:20%;
    top:0;
}
.cont h2{
    padding-bottom: 2%;
    margin:0;
    font-size: 1.5vw;
    color: #444;
    font-weight: normal;
}
.cont a{
    font-size:1.5vw ;
    margin-top:2vw;
    color:#444
}
.soc{
    margin:10px;
}
.soc-item{
    display:inline;
    padding-right:5%;
    
}
.soc-item img{
    width:2.3%;
    
}
.yt{
    padding-top:1%;
    padding-bottom:3%;
    padding-right: 2%;
    top: 0;
    width:28vw;
    height:18vw;
    position:absolute;
    right:0;
}
.coprt{
    position:absolute;    
    left:45%;
    font-family: Montserrat;
    font-weight:lighter;
}
.coprt h1{
    font-size: 1.5vw;
    font-family: Montserrat;
    font-weight:lighter;
    color:black;

}

